--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>JavaScript学習</title>
+    <title>HTML練習問題</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!--ヘッダー-->
-    <header class="header">
-      <div class="logo">JavaScript学習</div>
-      <div class="login"><a href="login.html">ログイン</a></div>
-    </header>
-    <!--メイン-->
+    <div class="header">
+      <div class="logo">TECH CHAT</div>
+      <div class="logout">ログアウト</div>
+    </div>
     <div class="main">
-      <!--サイドバー-->
       <div class="side-bar">
       </div>
-    </div>
-    <!--テキストエリア-->
-    <div class="text-area">
-      <div class="input-form"></div>
-    </div>
-    <!--フッター-->
-    <div class="footer">
+      <div class="chat-main">
+      </div>
     </div>
   </body>
 </html>
