diary部分&チャット欄メイン部分作成

--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
   <body>
     <div class="header">
       <div class="logo">TECH CHAT</div>
-      <div class="logout">ログアウト</div>
+      <div class="logout"><a href="logout.html">ログアウト</a></div>
     </div>
     <div class="main">
       <div class="side-bar">
+        <div class="diaries">
+          <div class="diary">
+            <div class="diary__date">3月1日(火)</div>
+            <div class="diary__text">今日は朝からHTMLの学習を行なっている。難しいけど分かってくると楽しい。</div>
+          </div>
+          <div class="diary">
+            <div class="diary__date">3月2日(水)</div>
+            <div class="diary__text">HTMLはコードを書くと見た目が変化するから理解しやすいかも。</div>
+          </div>
+          <div class="diary">
+            <div class="diary__date">3月3日(木)</div>
+            <div class="diary__text">自分でサイトを作ってみたくなってきた。</div>
+          </div>
+        </div>
       </div>
       <div class="chat-main">
+        <div class="input-form"></div>
       </div>
     </div>
   </body>
