--- a/logout.html
+++ b/logout.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <!-- ヘッダー -->
+    <header class="header">
+      <div class="logo">TECH CHAT</div>
+      <div class="logout"><a href="logout.html">ログアウト</a></div>
+    </header>
+
+    <!-- メイン -->
+    <div class="dialog-main">
+      <div class="dialog">
+        <div class="dialog__header">ヘッダー</div>
+        <div class="dialog__body">ログアウトしました</div>
+      </div>
+    </div>
   </body>
 </html>
