--- a/logout.html
+++ b/logout.html
@@ -18,6 +18,7 @@
       <div class="dialog">
         <div class="dialog__header">ヘッダー</div>
         <div class="dialog__body">ログアウトしました</div>
+        <div class="dialog__delete"></div>
       </div>
     </div>
   </body>
